2007-10-21  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: fix bugzilla component

2007-10-21  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: bump libxklavier requirement to 3.3
	* capplets/keyboard/gnome-keyboard-properties-xkbmc.c: remove
	compatibility hack for libxklavier <= 3.2

2007-10-18  Bastien Nocera  <hadess@hadess.net>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
	Add more default keybindings for otherwise unbound keys
	(Closes: #487935)

2007-10-14  Jens Granseuer  <jensgr@gmx.net>

	* configure.in:
	* capplets/common/gnome-theme-info.c (gnome_theme_init): query and
	monitor the xcursor icon dir for cursor themes, too (bug #469882)

2007-10-09  Bastien Nocera  <hadess@hadess.net>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
	Default to using XF86* keysyms for the audio related keybindings,
	allows those to work out-of-the-box when the right keymap is
	selected (Closes: #485076)

2007-10-08  Sergey Udaltsov <svu@gnome.org>

	* configure.in: bumping libgnomekbd requirement to 2.21.1

2007-10-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Stephane Loeuillet <leroutier@gmail.com>

	* capplets/about-me/gnome-about-me.desktop.in.in:
	* capplets/accessibility/at-properties/at-properties.desktop.in.in:
	* capplets/accessibility/keyboard/accessibility-keyboard.desktop.in.in:
	* capplets/appearance/data/gnome-appearance-properties.desktop.in.in:
	* capplets/appearance/data/gnome-theme-installer.desktop.in.in:
	* capplets/appearance/theme-save.c:
	* capplets/default-applications/default-applications.desktop.in.in:
	* capplets/default-applications/gnome-at-session.desktop.in.in:
	* capplets/display/display-properties.desktop.in.in:
	* capplets/keybindings/keybinding.desktop.in.in:
	* capplets/keyboard/keyboard.desktop.in.in:
	* capplets/mouse/gnome-settings-mouse.desktop.in.in:
	* capplets/network/gnome-network-preferences.desktop.in.in:
	* capplets/sound/gnome-settings-sound.desktop.in.in: