@@ -13,6 +13,9 @@
 	<KeyListEntry
 	name="/apps/gnome_settings_daemon/keybindings/media" />
 
+	<KeyListEntry	
+	name="/apps/gnome_settings_daemon/keybindings/calculator" />
+
 	<KeyListEntry
 	name="/apps/gnome_settings_daemon/keybindings/play" />
 
