@@ -33,6 +33,7 @@ enum {
 	EJECT_KEY,
 	HOME_KEY,
 	MEDIA_KEY,
+	CALCULATOR_KEY,
 	SEARCH_KEY,
 	EMAIL_KEY,
 	SLEEP_KEY,
@@ -65,6 +66,7 @@ static struct {
 	{ EJECT_KEY, GCONF_BINDING_DIR "/eject", NULL },
 	{ HOME_KEY, GCONF_BINDING_DIR "/home", NULL },
 	{ MEDIA_KEY, GCONF_BINDING_DIR "/media", NULL },
+	{ CALCULATOR_KEY, GCONF_BINDING_DIR "/calculator", NULL },
 	{ SEARCH_KEY, GCONF_BINDING_DIR "/search", NULL },
 	{ EMAIL_KEY, GCONF_BINDING_DIR "/email", NULL },
 	{ SLEEP_KEY, GCONF_BINDING_DIR "/sleep", NULL },
