@@ -144,6 +144,17 @@
             </locale>
         </schema>
 
+        <schema>
+            <key>/schemas/apps/gnome_settings_daemon/keybindings/calculator</key>
+            <applyto>/apps/gnome_settings_daemon/keybindings/calculator</applyto>
+            <type>string</type>
+            <default>XF86Calculator</default>
+            <locale name="C">
+                <short>Launch calculator</short>
+                <long>Launch calculator's shortcut</long>
+            </locale>
+        </schema>
+
 
         <schema>
             <key>/schemas/apps/gnome_settings_daemon/keybindings/www</key>
