@@ -1,3 +1,13 @@
+2007-10-22  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Sebastian Bacher <seb128@debian.org>
+
+	* capplets/keybindings/00-multimedia-key.xml.in:
+	* gnome-settings-daemon/action/acme.h:
+	* gnome-settings-daemon/gnome-settings-multimedia-keys.c (do_action):
+	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
+	add support for calculator key
+
 2007-10-21  Jens Granseuer  <jensgr@gmx.net>
 
 	* configure.in: fix bugzilla component
